# autoroute-manager

./: .gitignore  README.md  config.yaml  environment.yml  ids.csv  pyproject.toml  setup.py  tests.csv
autoroute/: __init__.py  autoroute.py  thread_dict.py
autoroute_manager/: __init__.py  autoroute.py
autoroute_manager/webui/: defaults_and_docs.json  ui.py  ui_manager.py
src/autoroute_manager/: __init__.py  autoroute.py
src/autoroute_manager/webui/: ui.py  ui_manager.py
tests/: test.py  test_autoroute.py  tests.py
tests/test_data/DEMs/single_4326/: N18W073_FABDEM_V1-2.tif
tests/test_data/DEMs/single_cropped/: cropped_dem.tif
tests/test_data/DEMs/tiles/: dem_0_0.tif  dem_0_1.tif  dem_0_2.tif  dem_1_0.tif  dem_1_1.tif  dem_1_2.tif  dem_2_0.tif  dem_2_1.tif  dem_2_2.tif
tests/test_data/LUs/multiple_nad/: lu_1.tif  lu_2.tif  lu_3.tif
tests/test_data/flow_files/: DR_flood_flows.txt  DR_test.txt  v2_flowfile.csv  v2_flows.csv
tests/test_data/mannings_table/: mannings.txt
tests/test_data/streamlines/dr_v0/: DR_v0_wCSV.gpkg
tests/test_data/streamlines/multiple_parquet_various/: set_1.gpkg  set_2.gpkg  set_3.gpkg
tests/test_data/streamlines/single_4326/: vpu_718.gpkg
tests/test_data/streamlines/single_parquet_3857/: vpu_718.parquet
tests/test_data/streamlines/single_parquet_4326/: vpu_718.parquet
tests/test_data/validation/maps/: all_params_flood.tif  simple_flood.tif
tests/test_data/validation/rasterization/: -72_163__18_623__-72_12__18_661__strm.tif  (+1 more)
webui/: ar_ui.py  defaults_and_docs copy.json  defaults_and_docs.json  helper_funcs.py
(+4 files in other folders)
